Initial commit for TedTalk Assignment
